# lab3_Damilola_Osidein

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  train.py
app/: main.py
app/data/: encoders.pkl
