[project]
name = "lab3_Damilola_Osidein"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn>=0.30.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "seaborn>=0.13.0",
    "pydantic>=2.8.0",
]

[tool.uv]
link-mode = "copy"