[project]
name = "lab3_Damilola_Osidein"
version = "0.1.0"
dependencies = [
    "fastapi>=0.100.0,<0.101.0",
    "uvicorn>=0.23.0,<0.24.0",
    "numpy>=1.23.5,<1.26.0",
    "pandas>=1.5.0,<2.0.0",
    "seaborn>=0.12.0,<0.13.0",
    "scikit-learn>=1.2.0,<1.3.0",
    "xgboost>=1.7.0,<2.0.0",
    "matplotlib>=3.7.0,<3.8.0"
]
